--- a/src/source/dp_news.css
+++ b/src/source/dp_news.css
@@ -4,22 +4,22 @@
 
 .dp_news .dp_dashed
 {
-	margin: 0.5em 0;
+        margin: 0.5em 0;
 }
 
-.dp_news img
+.dp_news_head img 
 {
-	padding-right: 8px;
+        float: left;
+        padding-right: 8px;
 }
 
-.dp_news > .dp_news_icon
+.dp_news_head p        
 {
-	float:left;
+        display:inline-block;
 }
 
 .dp_news_avatar
 {
-	width: 45px;
-	height: 45px;
+        width: 45px;
+        height: 45px;
 }
-
